# hello-opencl

./: CMakeLists.txt  README.md
include/: error-code.hpp  get-kernel-source.hpp
kernel/: opencl-matrix-multiplication-naive.cl  opencl-vector-addition.cl
src/: opencl-info.cpp  opencl-matrix-multiplication-naive.cpp  opencl-vector-addition.cpp
